[gd_scene load_steps=16 format=3 uid="uid://d35m6yghbvbyq"]

[ext_resource type="Script" path="res://scene/upgrade_shop.gd" id="1_ph3of"]
[ext_resource type="Texture2D" uid="uid://bfddw2yslfdcf" path="res://img_misc/panelcontainer.png" id="1_w4grm"]
[ext_resource type="Texture2D" uid="uid://bq0nqkuliuv5v" path="res://img_misc/attack.png" id="2_6lhtv"]
[ext_resource type="Texture2D" uid="uid://28ordtdonqcu" path="res://img_misc/Illustration727vtran.png" id="2_55p8s"]
[ext_resource type="Texture2D" uid="uid://d04onyypvkl86" path="res://img_misc/heart.png" id="2_qaxyv"]
[ext_resource type="StyleBox" uid="uid://ca3h58dvds0ie" path="res://style.tres" id="2_rbg8s"]
[ext_resource type="Texture2D" uid="uid://bxp84lcqp31ke" path="res://img_misc/castle.jpg" id="3_w3d87"]
[ext_resource type="Texture2D" uid="uid://w2h1gd6nra6i" path="res://img_misc/crit.png" id="4_5g6sx"]
[ext_resource type="AudioStream" uid="uid://cjqlk5ewhigj3" path="res://sfx/money.ogg" id="9_prfpa"]
[ext_resource type="AudioStream" uid="uid://eow2k4k8rjgc" path="res://sfx/woodknock.ogg" id="10_p3pua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xd34i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gee4a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_adgbf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_alduy"]
texture = ExtResource("1_w4grm")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
modulate_color = Color(0.252028, 0.252028, 0.252028, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5qr3"]
texture = ExtResource("1_w4grm")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
modulate_color = Color(0.986847, 0.956177, 0.963063, 1)

[node name="upgrade_shop" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ph3of")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -420.0
offset_right = 420.0
offset_bottom = 217.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.709804, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "UPGRADE SHOP"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -24

[node name="HealthIncrease" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_xd34i")
text = "Health"
icon = ExtResource("2_qaxyv")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="attackIncrease" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_gee4a")
text = "Damage"
icon = ExtResource("2_6lhtv")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="critIncrease" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_adgbf")
text = "Critical Chance"
icon = ExtResource("4_5g6sx")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="description" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Select upgrade"

[node name="cost" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5

[node name="amount owned" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_gee4a")
theme_override_styles/hover = SubResource("StyleBoxTexture_alduy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_r5qr3")
theme_override_styles/normal = ExtResource("2_rbg8s")
text = "Back"

[node name="Illustration727Vtran" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(219, 112)
scale = Vector2(0.0473236, 0.0473236)
texture = ExtResource("2_55p8s")

[node name="Castle" type="Sprite2D" parent="."]
z_index = -7
position = Vector2(158, 117)
scale = Vector2(0.4975, 0.4975)
texture = ExtResource("3_w3d87")

[node name="buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_prfpa")
volume_db = -15.0
bus = &"SFX"

[node name="unableBuy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_p3pua")
volume_db = -20.0
pitch_scale = 0.25
bus = &"SFX"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/HealthIncrease" to="." method="_on_health_increase_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HealthIncrease" to="." method="_on_health_increase_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/attackIncrease" to="." method="_on_attack_increase_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/attackIncrease" to="." method="_on_attack_increase_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/critIncrease" to="." method="_on_crit_increase_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/critIncrease" to="." method="_on_crit_increase_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
